--- a/OM_GANAPATIC _ELECTRONIC.html
+++ b/OM_GANAPATIC _ELECTRONIC.html
@@ -31,7 +31,7 @@
         •     Gobierno de España: 234.948,38€ (para cubrir pérdidas, pago ICO y pago a proveedores)</h2>
     </div>
     <div>
-        <object data="OM GANAPATI ELECTRONIC SL INFORME AUDITOR.pdf" height="100%" width="100%"></object>
+        <object data="OM GANAPATI ELECTRONIC SL INFORME AUDITOR.pdf" height="20000px" width="100%"></object>
     </div>
 </body>
 </html>
