--- a/OM_GANAPATIC _ELECTRONIC.html
+++ b/OM_GANAPATIC _ELECTRONIC.html
@@ -19,7 +19,7 @@
         Actividad: 4754 (competencias es el comercio al por menor de aparatos electrónicos) <br />
         Cuenta de pérdidas/ganancias: 742.046,60 € <br />
         Contratos, convenios y encomiendas de gestión <br />
-        Año 2021: <br />
+        A fecha 16/06/2022: <br />
         •     No existe información presupuestaria y contable <br />
         •     No existen contratos formalizados con entidades públicas <br />
         •     No existe relación de contratos resueltos con entidades públicas <br />
@@ -28,7 +28,10 @@
         <br />
         Ayudas y subvenciones concedidas (sobrevenidas por el COVID-19) <br />
         •     Gobierno de canarias: 11.129,40€ (para cubrir disminución de facturación) <br />
-        •     Gobierno de España: 234.948,38€ (para cubrir pérdidas, pago ICO y pago a proveedores)</h2>
+        •     Gobierno de España: 234.948,38€ (para cubrir pérdidas, pago ICO y pago a proveedores)
+        Información económica financiera  <br />
+        A 16/06/2022 no existe obligación de publicar las cuentas anuales porque no se superan los 600.000 euros de subvenciones </h2>
+        <h1 style="color: blue">INFORME DE AUDITORÍA 2021</h1>
     </div>
     <div>
         <object data="OM GANAPATI ELECTRONIC SL INFORME AUDITOR.pdf" height="20000px" width="100%"></object>
