--- a/OM_GANAPATIC _ELECTRONIC.html
+++ b/OM_GANAPATIC _ELECTRONIC.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <h1 style="color: blue">OM GANAPATIC ELECTRONIC S.L.</h1>
-    <h2> Sus administradores solidarios son Meghumal Ahuja y Bhumika Meghumal. <br />
+    <h2 style="font-weight: 100"> Sus administradores solidarios son Meghumal Ahuja y Bhumika Meghumal. <br />
         Con un organigrama lineal. <br />
         El fin de la entidad, sus funciones y competencias es el comercio al por menor de aparatos electrónicos. <br />
         Información institucional <br />
